[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1","cython==3.1.0a1","numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pyMedfound"
dynamic = ["version"]
authors = [
  { name="梦归云帆", email="1138663075@qq.com" },
]
description = "Microsoft Media Foundation for python"
keywords = ["python","windows","media"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "pyMedfound.__version__"}

[tool.cyright]

[project.urls]
Homepage = "https://github.com/Puiching-Memory/pyMedfound"
Issues = "https://github.com/Puiching-Memory/pyMedfound/issues"